<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuapp_name"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#00FFFF"
            android:shadowColor="#FFFFFF"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuapp2_name"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="#FF0080" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_correo"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_ejcorreo"
            android:background="@drawable/bg_edittext"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:textColor="#FFFFFF"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_ejpass"
            android:background="@drawable/bg_edittext"
            android:padding="12dp"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rpass"
            android:textColor="#FFFFFF"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/txt_ejpass"
            android:background="@drawable/bg_edittext"
            android:padding="12dp"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_act2"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:textStyle="bold"
                android:textColor="#0000FF"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333333"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_continuar"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="8dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google"
                android:layout_margin="8dp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_facebook"
                android:layout_margin="8dp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_x"
                android:layout_margin="8dp"/>
        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/txt_log"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="#FF0080"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>
